update readme and add staging env

--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "test:watch": "npm run jest -- --watch",
     "webapp:build": "npm run clean-www && npm run webapp:build:dev",
     "webapp:build:dev": "npm run webpack -- --config webpack/webpack.dev.js --env stats=minimal",
+    "webapp:build:stag": "npm run webpack -- --config webpack/webpack.stag.js --env stats=minimal",
     "webapp:build:prod": "npm run webpack -- --config webpack/webpack.prod.js --progress=profile",
     "webapp:dev": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --inline --port=9060 --env stats=minimal",
     "webapp:dev-verbose": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --inline --port=9060 --progress=profile --env stats=normal",
+    "webapp:stag": "npm run webpack-dev-server -- --config webpack/webpack.stag.js --inline --port=9060 --env stats=minimal",
+    "webapp:stag-verbose": "npm run webpack-dev-server -- --config webpack/webpack.stag.js --inline --port=9060 --progress=profile --env stats=normal",
     "webapp:prod": "npm run clean-www && npm run webapp:build:prod",
     "webapp:test": "npm run test",
     "webpack-dev-server": "npm run webpack -- serve",
