add entity challenge

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -36,6 +36,8 @@
     "serviceDiscoveryType": false,
     "enableHibernateCache": true,
     "reactive": false,
-    "languages": ["en", "fr"]
+    "languages": ["en", "fr"],
+    "lastLiquibaseTimestamp": 1624348181000,
+    "entities": ["Challenge"]
   }
 }
