--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@availity/reactstrap-validation-date": "^4.0.2",
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@fortawesome/react-fontawesome": "0.1.14",
@@ -50,6 +51,7 @@
     "lodash": "4.17.21",
     "path-browserify": "1.0.1",
     "react": "17.0.1",
+    "react-datetime-picker": "^3.3.0",
     "react-dom": "17.0.1",
     "react-hot-loader": "4.13.0",
     "react-jhipster": "0.15.0",
@@ -59,7 +61,8 @@
     "react-router-dom": "5.2.0",
     "react-toastify": "7.0.3",
     "react-transition-group": "4.4.1",
-    "reactstrap": "8.9.0",
+    "reactstrap": "^8.9.0",
+    "reactstrap-date-picker": "0.0.11",
     "redux": "4.0.5",
     "redux-devtools": "3.7.0",
     "redux-devtools-dock-monitor": "1.2.0",
