--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "availity-reactstrap-validation": "2.7.1",
     "axios": "0.21.1",
     "bootstrap": "4.6.0",
+    "camelcase-keys": "^6.2.2",
     "dayjs": "1.10.4",
     "loaders.css": "0.1.2",
     "lodash": "4.17.21",
     "path-browserify": "1.0.1",
     "react": "17.0.1",
+    "react-datetime": "^3.0.4",
     "react-dom": "17.0.1",
     "react-hot-loader": "4.13.0",
     "react-jhipster": "0.15.0",
