--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "lodash": "4.17.21",
     "path-browserify": "1.0.1",
     "react": "17.0.1",
-    "react-datetime-picker": "^3.3.0",
+    "react-datetime": "^3.0.4",
     "react-dom": "17.0.1",
     "react-hot-loader": "4.13.0",
     "react-jhipster": "0.15.0",
@@ -59,6 +59,7 @@
     "react-redux": "7.2.3",
     "react-redux-loading-bar": "5.0.0",
     "react-router-dom": "5.2.0",
+    "react-select": "^4.3.1",
     "react-toastify": "7.0.3",
     "react-transition-group": "4.4.1",
     "reactstrap": "^8.9.0",
