--- a/package.json
+++ b/package.json
@@ -38,19 +38,24 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@availity/api-axios": "^5.4.0",
+    "@availity/api-core": "^5.4.0",
+    "@availity/localstorage-core": "^2.6.1",
     "@availity/reactstrap-validation-date": "^4.0.2",
+    "@availity/reactstrap-validation-select": "^7.0.2",
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@fortawesome/react-fontawesome": "0.1.14",
     "antd": "^4.16.1",
-    "availity-reactstrap-validation": "2.7.1",
-    "axios": "0.21.1",
+    "availity-reactstrap-validation": "^2.7.1",
+    "availity-uikit": "^3.0.0",
+    "axios": "^0.19.2",
     "bootstrap": "4.6.0",
     "dayjs": "1.10.4",
     "loaders.css": "0.1.2",
     "lodash": "4.17.21",
     "path-browserify": "1.0.1",
-    "react": "17.0.1",
+    "react": "^17.0.1",
     "react-datetime": "^3.0.4",
     "react-dom": "17.0.1",
     "react-hot-loader": "4.13.0",
@@ -62,7 +67,7 @@
     "react-select": "^4.3.1",
     "react-toastify": "7.0.3",
     "react-transition-group": "4.4.1",
-    "reactstrap": "^8.9.0",
+    "reactstrap": "^6.5.0",
     "reactstrap-date-picker": "0.0.11",
     "redux": "4.0.5",
     "redux-devtools": "3.7.0",
