update app name, add page size picker, fix draftjs editor error text

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foxstep-2-admin-webapp",
+  "name": "foxstep-admin-webapp",
   "version": "0.0.1-SNAPSHOT",
   "private": true,
   "description": "Description for foxstep2AdminWebapp",
