--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "dayjs": "1.10.4",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "html-react-parser": "^1.2.7",
     "html-to-draftjs": "^1.5.0",
     "loaders.css": "0.1.2",
     "lodash": "4.17.21",
@@ -64,7 +65,6 @@
     "react-dom": "17.0.1",
     "react-draft-wysiwyg": "^1.14.7",
     "react-hot-loader": "4.13.0",
-    "react-html-parser": "^2.0.2",
     "react-jhipster": "0.15.0",
     "react-loadable": "5.5.0",
     "react-redux": "7.2.3",
