--- a/package.json
+++ b/package.json
@@ -55,13 +55,13 @@
     "dayjs": "1.10.4",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
-    "html-react-parser": "^1.2.7",
+    "html-react-parser": "1.2.7",
     "html-to-draftjs": "^1.5.0",
+    "jwt-decode": "^3.1.2",
     "loaders.css": "0.1.2",
     "lodash": "4.17.21",
     "path-browserify": "1.0.1",
     "react": "17.0.1",
-    "react-datetime": "^3.0.4",
     "react-dom": "17.0.1",
     "react-draft-wysiwyg": "^1.14.7",
     "react-hot-loader": "4.13.0",
@@ -74,7 +74,6 @@
     "react-toastify": "7.0.3",
     "react-transition-group": "4.4.1",
     "reactstrap": "^8.9.0",
-    "reactstrap-date-picker": "0.0.11",
     "redux": "4.0.5",
     "redux-devtools": "3.7.0",
     "redux-devtools-dock-monitor": "1.2.0",
