suppress eslint, Foxsteps to FoxSteps

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,7 +56,8 @@
     "@typescript-eslint/unbound-method": "off",
     "@typescript-eslint/array-type": "off",
     "@typescript-eslint/no-shadow": "error",
-    "spaced-comment": ["warn", "always"],
+    "spaced-comment": "off",
+    "no-tabs": "off",
     "guard-for-in": "error",
     "no-labels": "error",
     "no-caller": "error",
